more simpler way to fixed Card menus on the right-hand column cut off by the edge of the page or the bottom of the page

--- a/BARD/web-app/css/bootstrap-plus.css
+++ b/BARD/web-app/css/bootstrap-plus.css
@@ -53,11 +53,11 @@
 
 .cardTitle {
 	float:left;
- 	width:93%;
+ 	width:92%;
 }
 
 .cardMenu {
 	float:left;
- 	width:7%;
-    text-align:left;
+ 	width:8%;
+    text-align:center;
 }
